--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
       <div class="tabs" style="margin-top:15px;">
         <button id="tab-current" class="active">Current Activity</button>
+        <button id="tab-future">Future Forecast</button>
         <button id="tab-sun">Sun Activity</button>
         <button id="tab-weather">Weather</button>
       </div>
@@ -66,6 +67,15 @@
           🌙 Loading Moon phase...
         </div>
       </section>
+      
+<!-- 🌌 FUTURE FORECAST -->
+<section id="future">
+  <h2>📅 3-Day Future Forecast</h2>
+  <div id="future-summary" class="forecast-box">
+    <p>Loading forecast...</p>
+  </div>
+  <div id="future-table" class="forecast-table"></div>
+</section>
 
       <!-- ☀️ SUN ACTIVITY -->
       <section id="sun">
