--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body style="background-color:#0f172a;color:#f1f5f9;font-family:sans-serif;">
     <header style="text-align:center;margin-top:15px;">
       <img 
-        src="ChatGPT Image 3. 11. 2025 13_02_46.png" 
+        src="Revontulet vuorten yllä.png" 
         alt="Aurora Track Logo" 
         style="width:120px;height:120px;border-radius:50%;object-fit:cover;box-shadow:0 0 15px rgba(0,255,170,0.4);"
       />
@@ -18,7 +18,6 @@
 
       <div class="tabs" style="margin-top:15px;">
         <button id="tab-current" class="active">Current Activity</button>
-        <button id="tab-future">Future Forecast</button>
         <button id="tab-sun">Sun Activity</button>
         <button id="tab-weather">Weather</button>
       </div>
@@ -67,15 +66,6 @@
           🌙 Loading Moon phase...
         </div>
       </section>
-      
-<!-- 🌌 FUTURE FORECAST -->
-<section id="future">
-  <h2>📅 3-Day Future Forecast</h2>
-  <div id="future-summary" class="forecast-box">
-    <p>Loading forecast...</p>
-  </div>
-  <div id="future-table" class="forecast-table"></div>
-</section>
 
       <!-- ☀️ SUN ACTIVITY -->
       <section id="sun">
