--- a/extra/extra.html
+++ b/extra/extra.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Future Activity – Aurora Forecast</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aurora 3-Day Forecast</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <header>
-    <a href="../index.html" class="back-button">←</a>
-    <h1>Future Aurora Activity</h1>
-  </header>
+  <body>
+    <header>
+      <div class="nav">
+        <!-- ✅ tlačítko zpět -->
+        <a href="../index.html" class="back-button">←</a>
+        <h1>Aurora 3-Day Forecast</h1>
+      </div>
+    </header>
 
-  <main>
-    <section id="future">
-      <h2>3-Day Aurora Forecast</h2>
-      <p id="forecast-summary">Loading forecast...</p>
-      <div id="forecast-table"></div>
-    </section>
-  </main>
+    <main>
+      <section id="forecast" class="active">
+        <div id="forecast-summary" class="forecast-box">
+          <p>Loading forecast...</p>
+        </div>
+        <div id="forecast-table" class="forecast-table"></div>
+      </section>
+    </main>
 
-  <script src="script.js"></script>
-</body>
+    <footer>
+      <small>© 2025 Jakub Mrůzek — Aurora Track</small>
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
